integration_tests/codegen_fail/fail/union/trait_name_double_underscored.stderr
error: All types and directives defined within a schema must not have a name which begins with `__` (two underscores), as this is used exclusively by GraphQL’s introspection system.
 --> $DIR/trait_name_double_underscored.rs:4:7
  |
4 | trait __Character {
  |       ^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Schema
